# cit

./: .gitignore  CMakeLists.txt  README.md  main.c
ass/: CMakeLists.txt  common.h  elf.h  elf_file.c  elf_file.h  generator.c  lexial.c  main.c  parser.c  semantic.c  semantic.h
compiler/: CMakeLists.txt  common.h  compiler.c  compiler.h  error.c  generator.c  lexial.c  main.c  parser.c  semantic.c  semantic.h
file/: test.c
lit/: CMakeLists.txt  elf_file.c  elf_file.h  linker.c  linker.h  main.c
